Fix bug where Firefox doesn't truncate text properly in file view

--- a/src/app/cube/learning-object-details/file-details/file-details.component.scss
+++ b/src/app/cube/learning-object-details/file-details/file-details.component.scss
@@ -55,6 +55,7 @@
   display: grid;
   grid-row-gap: 10px;
   margin: 20px 0;
+  grid-auto-columns: 100%;
 }
 
 .link-listing {
