--- a/src/app/shared/filesystem/file-list-view/file-list-view.component.scss
+++ b/src/app/shared/filesystem/file-list-view/file-list-view.component.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-row-gap: 5px;
   padding-bottom: 15px;
+  grid-auto-columns: 100%;
 }
 
 .grid-row {
@@ -26,6 +27,7 @@
 .text-contained {
   text-overflow: ellipsis;
   overflow: hidden;
+  white-space: nowrap;
 }
 .inline-flex {
   display: flex;
